feat: Update README, port, and styles
- Update README with project details
- Change port to 7788
- Fix CSS layout issues with long text
- Filter subjects to a specific list

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -131,15 +131,15 @@
                         </h3>
                         <div class="form-group">
                             <label for="principalName">校长</label>
-                            <input type="text" id="principalName" placeholder="俞吉光" value="俞吉光">
+                            <input type="text" id="principalName" placeholder="请输入姓名" value="请输入姓名">
                         </div>
                         <div class="form-group">
                             <label for="directorName">教务主任</label>
-                            <input type="text" id="directorName" placeholder="徐永方" value="徐永方">
+                            <input type="text" id="directorName" placeholder="请输入姓名" value="请输入姓名">
                         </div>
                         <div class="form-group">
                             <label for="teacherName">班主任</label>
-                            <input type="text" id="teacherName" placeholder="田海霞" value="田海霞">
+                            <input type="text" id="teacherName" placeholder="请输入姓名" value="请输入姓名">
                         </div>
                     </div>
 
