Fix: 修复综合素质评价表缺少社会字段的问题

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -335,5 +335,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="js/app.js"></script>
+    <footer>
+        <p>
+            Crafted by <img src="../images/steve.jpeg" alt="Author: Steve Zhou" class="author-image"> . This is a tool for personal and educational use only.
+            <br>
+            Please use it responsibly and in accordance with the terms of service of any third-party services you use.
+        </p>
+        <div class="social-links">
+            <a href="https://x.com/st7evechou" target="_blank" rel="noopener noreferrer" title="X / Twitter"><img src="../images/Twitter.png" alt="X / Twitter"></a>
+            <a href="https://github.com/zxfccmm4/StudentReport" target="_blank" rel="noopener noreferrer" title="GitHub"><img src="../images/github.png" alt="GitHub"></a>
+            <a href="https://t.me/st7evee" target="_blank" rel="noopener noreferrer" title="Telegram"><img src="../images/Telegram.png" alt="Telegram"></a>
+            <a href="https://zxfccmm.com" target="_blank" rel="noopener noreferrer" title="Blog"><img src="../images/blog.png" alt="Blog"></a>
+        </div>
+    </footer>
 </body>
 </html>
